# libnsl

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  autogen.sh  config.h.in  config.rpath  configure.ac  libnsl.pc.in
.github/workflows/: ci.yml
ci/: install-dependencies.sh  run-build-and-tests.sh
po/: Makevars  POTFILES.in  libnsl.pot
src/: Makefile.am  do_ypcall.c  internal.h  libc-lock.h  libnsl.map  netdir.c  netdir.h  taddr2host.c  taddr2ipstr.c  taddr2port.c  yp_first.c  yp_get_default_domain.c  yp_maplist.c  yp_master.c  yp_match.c  yp_next.c  yp_order.c  yp_xdr.c  ypbinderr_string.c  yperr_string.c  ypprot_err.c
src/nisplus/: nis_add.c  nis_addmember.c  nis_call.c  nis_callback.c  nis_checkpoint.c  nis_clone_dir.c  nis_clone_obj.c  nis_creategroup.c  nis_defaults.c  nis_destroygroup.c  nis_domain_of.c  nis_domain_of_r.c  nis_error.c  nis_file.c  nis_findserv.c  nis_free.c  nis_getservlist.c  nis_intern.h  nis_ismember.c  nis_local_names.c  nis_lookup.c  nis_mkdir.c  nis_modify.c  nis_ping.c  nis_print.c  nis_print_group_entry.c  nis_remove.c  nis_removemember.c  nis_rmdir.c  nis_server.c  nis_subr.c  nis_table.c  nis_util.c  nis_verifygroup.c  nis_xdr.c  nis_xdr.h
src/rpcsvc/: nislib.h  yp.h  yp_prot.h  ypclnt.h  yppasswd.h
